--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <h1>HELLO</h1> 
-    
+
+
+  
+
+  <h1 class="header">Admin Dashboard</h1>
+  <!-- -------------------------- To set intervals --------------------------- -->
+  <div class="set_interval">
+      <input name="interval" type="number" min="1" value="3"/>
+      <button>Set</button>
+      <span class="span_int">Set the interval of the frames (in minutes).</span>
+  </div>
+
+  <!-- ----------------------- To insert user details & images ------------------------ -->
+  <div class="container"></div>
+    <script type="module" src="js/index.js"></script>
 </body>
 </html>
